--- a/examples.html
+++ b/examples.html
@@ -46,6 +46,31 @@
             </div>
 
 
+            <h4>Separated Inputs</h4>
+            <div class="well">
+
+               <form class="form-horizontal">
+                 <fieldset>
+                  <div class="control-group">
+                    <div class="controls">
+                      <input type="text" style="width: 200px; display: inline;" name="reservation" id="bdrp-si-start" class="form-control" value="03/18/2013" />
+                      <input type="text" style="width: 200px; display: inline;" name="reservation" id="bdrp-si-end" class="form-control" value="03/23/2013" />
+                    </div>
+                  </div>
+                 </fieldset>
+               </form>
+
+               <script type="text/javascript">
+               $(document).ready(function() {
+                  $('#bdrp-si-start').daterangepicker({separatedInputs: true, relatedElement: $('#bdrp-si-end')}, function(start, end, label) {
+                    console.log(start.toISOString(), end.toISOString(), label);
+                  });
+               });
+               </script>
+
+            </div>
+
+
             <h4>Basic Single Date Picker</h4>
             <div class="well">
 
